# tymek2026_api

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  vercel.json
app/: auth.py  config.py  database.py  main.py  models.py
app/crud/: SupporterCRUD.py
app/routes/: supporters.py
app/schemas/: supporter.py
